# autostego

./: .gitattributes  .gitignore  README.md  alice.py  eve.py  program_alice.md  program_eve.md  pyproject.toml
assets/checkpoints/: jin_srnet.ckpt
scripts/: embed_config.py  run_pipeline_config.py
steganalysis/: __init__.py  _lclsmr.py  _srm.py  _srm_gpu.py  fusion.py  lclsmr.py  srm.py  srnet.py  train_features.py
steganography/: __init__.py  common.py  embed_dir.py  hill.py  masquerade.py  suniward.py  wow.py
utils/: download_data.py  files.py  reports.py
